# agents-task-7

./: .gitignore  .organized  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RUNNING_AGENTS.md  pyproject.toml  pytest.ini  run_league.py  start_league_manager.py  start_player.py  test_player_manual.py
.github/workflows/: ci.yml
SHARED/config/defaults/: referee.json
agent/: __main__.py  app.py  config.py  jsonrpc.py  registration.py  selftest.py  tools.py
docs/: API_REFERENCE.md  ARCHITECTURE_DESIGN.md  BUDGET_TRACKING.md  MANUAL_TESTING_GUIDE.md  PLUGIN_DEVELOPMENT.md  PRODUCT_REQUIREMENTS.md  PROJECT_STRUCTURE.md  REFEREE_ARCHITECTURE.md  RUNNING_AGENTS.md  RUNNING_LEAGUE_MANAGER.md  RUNNING_MODES.md  RUNNING_REFEREE.md  START_TOURNAMENT.md  STRATEGIES.md  STRATEGY_IMPLEMENTATION.md  TROUBLESHOOTING.md  UNDERSTANDING_MATCH_OUTPUT.md
scripts/: cleanup.sh  run_full_league.py  run_league.py  start_league_manager.py  start_player.py  start_referee.py  validate_system.py  verify.py
src/: __init__.py
src/agents/: __init__.py
src/agents/league_manager/: __init__.py  __main__.py  app.py  config.py  manager.py  tools.py
src/agents/player/: __init__.py  __main__.py  app.py  config.py  main.py  plugin_loader.py  selftest.py  state.py  strategy.py  tools.py
src/agents/player/plugins/: __init__.py
src/agents/player/plugins/sample_strategy/: __init__.py  strategy.py
src/agents/referee/: __init__.py  __main__.py  app.py  client.py  main.py  referee.py
src/shared/: __init__.py  http.py  jsonrpc.py  logging.py  models.py
src/shared/repositories/: __init__.py  match_repo.py  player_history_repo.py  rounds_repo.py  standings_repo.py
tests/: conftest.py  mock_league.py  test_integration_http.py  test_jsonrpc.py  test_referee_integration.py  test_registration.py  test_state.py  test_state_integration.py  test_tools.py
tests/manual/: test_player_manual.py
